0.9.1
-----
- Added lite_get_progressbar_value(), lite_get_text_button_state()
- Added LITE_BOUNDING_UPDATES and LITE_DEBUG_UPDATES environment variables
- Back to widgets built inside the LiTE library
- Create default theme for widgets during lite_open() sequence
- Meson build system
- Replace LITE_NO_THEME with LITE_NO_FRAME

0.8.10 (September 19 2008)
------
- Added lite_get_layer_size()
- Added lite_set_box_visible()
- Use MakeSubSurface() instead of GetSubSurface()

0.8.9 (July 1 2008)
-----
- Added lite_get_textline_text()

0.8.8 (June 21 2008)
-----
- Move widgets to a new library called LeCK, LiTE's extended Component Kit

0.8.7 (June 9 2008)
-----
- Allow different types of buttons: Push and Toggle
- New check, list, scrollbar and text button widgets

0.8.6 (December 21 2007)
-----
- Don't load default cursor if LITE_NO_CURSOR is exported

0.8.5 (December 14 2007)
-----
- Release the drag box when the containing window is left. Since the mouse is
  grabbed while dragging, this only happens when other parts of the system
  adjust the window hierarchy

0.8.4 (March 1 2007)
-----
- Change the order of calls in the event loop so that window refresh occurs
  without also triggering timeouts

0.8.3 (December 13 2006)
-----
- Added lite_window_event_available(), lite_set_window_bounds()
- Added lite_rebase_window_timeouts(), lite_destroy_all_windows()
- lite_window_event_loop() will force an update at least once every 200
  milliseconds in case an update is needed and hasn't happened yet

0.8.2 (October 14 2006)
-----
- Support for vertical sliders

0.8.1 (September 20 2006)
-----
- Added lite_set_window_enabled()

0.8.0 (August 30 2006)
-----
- When a window has been resized but the resizing hasn't taken effect, updates
  to the window will be discarded until the resizing occurs, as resizing will
  force a redraw of the whole window

0.7.2 (May 5 2006)
-----
- Added lite_get_font_filename()